fix: toolbar justify-content to flex-start, remove stale btn whitespace rule

--- a/modules/liferay-dummy-factory/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/liferay-dummy-factory/src/main/resources/META-INF/resources/css/main.scss
@@ -81,13 +81,9 @@
 	.workflow-json-toolbar {
 		align-items: center;
 		border-bottom: 1px solid #e5e7eb;
-		justify-content: space-between;
+		justify-content: flex-start;
 		margin-bottom: 1rem;
 		padding-bottom: 1rem;
-	}
-
-	.workflow-json-toolbar .btn {
-		white-space: nowrap;
 	}
 
 	.workflow-json-schema-button {
